--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<app-diretiva-ngswitch></app-diretiva-ngswitch>
+
+<!-- <app-diretiva-ngif></app-diretiva-ngif> -->
+
+<!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
+
+<!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
+
+<app-diretiva-ngstyle></app-diretiva-ngstyle>
