--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-diretiva-ngswitch></app-diretiva-ngswitch>
+<app-sample-ngswitch></app-sample-ngswitch>
 
-<!-- <app-diretiva-ngif></app-diretiva-ngif> -->
+<!-- <app-sample-ngif></app-sample-ngif> -->
 
-<!-- <app-diretiva-ngfor></app-diretiva-ngfor> -->
+<!-- <app-sample-ngfor></app-sample-ngfor> -->
 
-<!-- <app-diretiva-ngclass></app-diretiva-ngclass> -->
+<!-- <app-sample-ngclass></app-sample-ngclass> -->
 
-<app-diretiva-ngstyle></app-diretiva-ngstyle>
+<!-- <app-sample-ngstyle></app-sample-ngstyle> -->
