--- a/src/app/directives/ngswitch/sample-ngswitch.component.html
+++ b/src/app/directives/ngswitch/sample-ngswitch.component.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand" href="#">Angular 2</a>
   <ul class="nav navbar-nav">
-    <li class="nav-item" [class.active]="aba == 'home'"
-      (click)="aba = 'home'">
+    <li class="nav-item" [class.active]="tab == 'home'"
+      (click)="tab = 'home'">
       <a class="nav-link" href="#">Home</a>
     </li>
-    <li class="nav-item" [class.active]="aba == 'features'"
-        (click)="aba = 'features'">
+    <li class="nav-item" [class.active]="tab == 'features'"
+        (click)="tab = 'features'">
       <a class="nav-link" href="#">Features</a>
     </li>
-    <li class="nav-item" [class.active]="aba == 'about'"
-        (click)="aba = 'about'">
+    <li class="nav-item" [class.active]="tab == 'about'"
+        (click)="tab = 'about'">
       <a class="nav-link" href="#">About</a>
     </li>
   </ul>
 </nav>
 
-<div class="container" [ngSwitch]="aba">
+<div class="container" [ngSwitch]="tab">
   <p *ngSwitchCase="'home'">Home</p>
   <p *ngSwitchCase="'features'">Features</p>
   <p *ngSwitchCase="'about'">About</p>
