--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,5 @@
 <!-- <app-sample-ngclass></app-sample-ngclass> -->
 
 <!-- <app-sample-ngstyle></app-sample-ngstyle> -->
+
+<app-angular-pipes></app-angular-pipes>
