--- a/src/app/directives/ngswitch/sample-ngswitch.component.html
+++ b/src/app/directives/ngswitch/sample-ngswitch.component.html
@@ -17,8 +17,8 @@
 </nav>
 
 <div class="container" [ngSwitch]="tab">
-  <p *ngSwitchCase="'home'">Home</p>
-  <p *ngSwitchCase="'features'">Features</p>
-  <p *ngSwitchCase="'about'">About</p>
-  <p *ngSwitchDefault>Home</p>
+  <h1 *ngSwitchCase="'home'">Home</h1>
+  <h1 *ngSwitchCase="'features'">Features</h1>
+  <h1 *ngSwitchCase="'about'">About</h1>
+  <h1 *ngSwitchDefault>Home</h1>
 </div>
